syntax = "proto3";
package proto.grpc;

/* private int id; */
/* private String host; */
/* private String port; */
/* private int district; */

message GreetingRequest {
    int32 id = 1;
    string host = 2;
    string port = 3;
    int32 district = 4;
}

message GreetingResponse {
    string message = 1;
}


service GreetingService {
    rpc greeting(GreetingRequest) returns (GreetingResponse);
    rpc streamGreeting(GreetingRequest) returns (stream GreetingResponse);
}
